--- a/projects/diner.html
+++ b/projects/diner.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 		<h1>Diner Maya Model</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-38.png" style= "height:450px; width:450px;">
+			<img src="../assets/projecttile-38.png" style= "width:100%;">
 		</div>
 
 		<p>
@@ -39,11 +39,11 @@
 		
 
 		<div class="proj_img">
-			<img src="../assets/diner1.png" style= "height:283px; width:506px;">
-			<img src="../assets/diner2.png" style= "height:363px; width:434px;">
-			<img src="../assets/diner3.png" style= "height:284px; width:508px;">
-			<img src="../assets/diner4.png" style= "height:328px; width:506px;">
-			<img src="../assets/diner5.png" style= "height:317px; width:507px;">
+			<img src="../assets/diner1.png" style= "width:100%;">
+			<img src="../assets/diner2.png" style= "width:100%;">
+			<img src="../assets/diner3.png" style= "width:100%;">
+			<img src="../assets/diner4.png" style= "width:100%;">
+			<img src="../assets/diner5.png" style= "width:100%;">
 		</div>
 
 		
@@ -52,8 +52,20 @@
 
 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Modeling Projects</h2>
+			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
