--- a/projects/dmcposter.html
+++ b/projects/dmcposter.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="active">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,15 +23,16 @@
 </div>
 
 <div class="top_padding"></div>	
+	<div class="content">
 	<div class="box_content">
 		<h1>DMC Posters</h1>
 		<div class="proj_img">
-<!-- 			<img src="../assets/dmcmock.png" style= "height:385px; width:650px;"> -->
-			<img src="../assets/pouroneout.png" style= "height:432px; width:306px;">
-			<img src="../assets/dmcposter.png" style= "height: 432px; width:306px;">
+<!-- 			<img src="../assets/dmcmock.png" style= "height:385px; width:650px;"> 432, 306 -- 141% 100%-->
+			<img src="../assets/pouroneout.png" style= "height:56.4%; width:40%;">
+			<img src="../assets/dmcposter.png" style= "height: 56.4%; width:40%;">
 		</div>
 		<p>
-		I created these posters for the Dartmouth Mountaineering Club's 18S Gear order. The club really wanted some posters to encapsulate the personalitiy and history of Dartmouth mountaineering, which inspired these first two designs. 
+		I created these posters for the Dartmouth Mountaineering Club's 18S Gear order. The club really wanted some posters to <mark>encapsulate the personalitiy and history of Dartmouth mountaineering</mark>, which inspired these first two designs. 
 		The first poster was inspired by the numerous break trips that the club has during the winter and spring. Each night, we would sit around the campfire retelling the day's adventures and playing the Wine Game, a traditional drinking game that honors "DMCers past and present" and begins with the phrase written on the poster. 
 		</p>
 		<p>
@@ -43,8 +43,29 @@
 		</p>
 		 
 	</div>
-	<br>
-	<br>
+</div>
+	<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Illustration Projects</h2>
+			<a href="dmcposter.html"><img class="tile_small" src="../assets/projecttile-08.png"></a>
+			<a href="snowwars.html"><img class="tile_small" src="../assets/projecttile-09.png"></a>
+			<a href="trips.html"><img class="tile_small" src="../assets/projecttile-11.png"></a>
+			<a href="iceposter.html"><img class="tile_small" src="../assets/projecttile-25.png"></a>
+			<a href="brewhaha.html"><img class="tile_small" src="../assets/projecttile-14.png"></a>
+			<a href="campdart.html"><img class="tile_small" src="../assets/projecttile-15.png"></a>
+			<a href="cabaret.html"><img class="tile_small" src="../assets/projecttile-49.png"></a>
+			<a href="apologia.html"><img class="tile_small" src="../assets/projecttile-50.png"></a>
+			<a href="vox.html"><img class="tile_small" src="../assets/projecttile-46.png"></a>
+			<a href="lunarnewyear.html"><img class="tile_small" src="../assets/projecttile-21.png"></a>
+			<a href="climbingteam.html"><img class="tile_small" src="../assets/projecttile-22.png"></a>
+			<a href="dog.html"><img class="tile_small" src="../assets/projecttile-23.png"></a>
+			<a href="grafficity.html"><img class="tile_small" src="../assets/projecttile-48.png"></a>
+			<a href="thefifty.html"><img class="tile_small" src="../assets/projecttile-30.png"></a>
+			<a href="provost.html"><img class="tile_small" src="../assets/projecttile-24.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
