--- a/projects/doc.html
+++ b/projects/doc.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,23 +23,40 @@
 </div>
 
 <div class="top_padding"></div>	
+<div class="content">
 	<div class="box_content">
 		<h1>DOC Posters</h1>
 		<div class="proj_img">
-			<img src="../assets/subclubs.png" style= "height:623px; width:496px;">
+			<img src="../assets/subclubs.png" style= "height:100%; width:80%;">
 		</div>
 			<p>
-			I worked extensively with the Dartmouth Outing Club to create informational flyers for the incoming freshmen as well as sustainability posters during the pre-orientation Trips program. I was given a lot of freedom in these designs and really enjoyed finding my own style through this process. 	
+			I worked extensively with the Dartmouth Outing Club to <mark>create informational flyers for the incoming freshmen as well as sustainability posters during the pre-orientation Trips program.</mark> I was given a lot of freedom in these designs and really enjoyed finding my own style through this process. 	
 			</p>
 		<div class="proj_img">
-			<img src="../assets/RecyclingCollis.jpg" style= "height:582px; width:450px;">
-			<img src="../assets/LodjFood.jpg" style= "height:582px; width:450px;">
-			<img src="../assets/RecyclingTrips.jpg" style= "height:582px; width:450px;">
+			<img src="../assets/RecyclingCollis.jpg" style= "height:103%; width:80%;">
+			<img src="../assets/LodjFood.jpg" style= "height:103%; width:80%;">
+			<img src="../assets/RecyclingTrips.jpg" style= "height:103%; width:80%;">
 		</div>
 		 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
