--- a/projects/earthweek.html
+++ b/projects/earthweek.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>	
+<div class="content">
 	<div class="box_content">
 		<h1>Earth Week Branding</h1>
 		<div class="proj_img">
-			<img src="../assets/earthweeklogo.png" style= "height:450px; width:450px;">
+			<img src="../assets/earthweeklogo.png" style= "height:100%; width:100%;">
 		</div>
 			<p>
 			The Sustainability Office asked me to help design and brand the 2017 Earth Week, which is a week-long series of events that promote sustainability, such as a social justice dinner, seminar discussions, fresh local food, and 2nd hand clothing pop-up shop. 
@@ -43,13 +43,29 @@
 			</p>
 			<p>
 			This project marks the start of my introduction to Illustrator and the glorious pen tool. I had previously used an iPad/Sketchbook and Photoshop to create designs, but I branched out into vector designs here. Looking back, I would definitely change a lot of colors and typography and think more about decluttering the poster (and making everything more readable). But overall, I am very happy with how everything turned out. 
-			Another big takeaway from this project is to <b>take on any design challenge</b>, especially when starting out. I was nervous taking on this project because I wasn't sure of my skills, but I'm so thankful I did because 1) lots of progress comes from just doing, and 2) I made many valuable connections through this project that resulted in many other design opportunities down the line.	
+			Another big takeaway from this project is to <mark>take on any design challenge</mark>, especially when starting out. I was nervous taking on this project because I wasn't sure of my skills, but I'm so thankful I did because <mark>1) lots of progress comes from just doing, and 2) I made many valuable connections through this project that resulted in many other design opportunities down the line.</mark>	
 			</p>
 		
 		 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
