--- a/projects/ef.html
+++ b/projects/ef.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,16 +23,17 @@
 </div>
 
 <div class="top_padding"></div>	
+	<div class="content">
 	<div class="box_content">
 		<h1>EF Education First Branding</h1>
 		<p>
-		Below are some samples (with permission) of my work as a Brand Marketing Intern for the Recruitment team at EF Education First. I designed external campaign material, from flyers and slide decks (shown below) to email/web campaigns used during college career fairs. The main goal for these pieces was to reflect EF's brand and encourage candidates to apply!
+		Below are some samples (with permission) of my work as a Brand Marketing Intern for the Recruitment team at EF Education First. I designed external campaign material, from flyers and slide decks (shown below) to email/web campaigns used during college career fairs. <mark>The main goal for these pieces was to reflect EF's brand and encourage candidates to apply!</mark>
 ​		</p>
 		<p>
 		I also worked on some internal projects such as 401(k) and Beneficiary campaigns which had a more free-form "fun" aspect and did not have to adhere to the EF brand. 
 ​		</p>
 		<p>
-		Finally, I was able to drive my own projects, which included an on-boarding booklet and the creation of an "Intern" people book that featured the "EF stories" of full-time employees who previously interned at the company. I conducted interviews, captured personalities through photos, wrote engaging copy, and designed the booklet that will be distributed to thousands of students as a marketing tool for recruitment.
+		Finally, I was able to <mark>drive my own projects and take initiative with new ideas,</mark> which included an on-boarding booklet and the creation of an "Intern" people book that featured the "EF stories" of full-time employees who previously interned at the company. I conducted interviews, captured personalities through photos, wrote engaging copy, and designed the booklet that will be distributed to thousands of students as a marketing tool for recruitment.
 ​		</p>
 		<p>
 		Note: While I created all the illustrations and designs, I did not take the photos for the recruitment material.  
@@ -69,8 +69,26 @@
 
 
 	</div>
-	<br>
-	<br>
+	</div>
+
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
+
 	<footer>
 	&copy; Regina Yan
 	</footer>
