--- a/projects/engs33.html
+++ b/projects/engs33.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 		<h1>Solid Mechanics Cantilever</h1>
 		<div class="proj_img">
-			<img src="../assets/iteration6.png" style= "height:295px; width:225px;">
+			<img src="../assets/iteration6.png" style= "width:70%;">
 		</div>
 
 		<p>
@@ -41,7 +41,7 @@
 		<h2>Iteration 1:</h2>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/iteration1.png" style= "height:275px; width:225px;">
+			<img src="../assets/iteration1.png" style= "width:70%;">
 		</div>
 		<p>
 			We went for a minimalistic design that aimed to optimize the strength-to-weight ratio. We wanted to incorporate cables and diagonal support beams that minimized the angle between itself and the bottom of the front plate. However, we realized we did not have any lateral bracing, which would result in severe twisting. 
@@ -54,7 +54,7 @@
 		<h2>Iteration 2:</h2>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/iteration2.png" style= "height:265px; width:240px;">
+			<img src="../assets/iteration2.png" style= "width:70%;">
 		</div>
 		<p>
 			In this design, we took the feedback about lateral bracing and added support right below the deck where the load would be. We also altered the diagonal support to take out the split cable design because we also learned that our initial design would produce too much twisting in the top half. This design held more weight but was also lighter. At this point, we also imported our own custom SolidWorks materials adjusted to our class data to more accurately predict stress values.  
@@ -67,7 +67,7 @@
 		<h2>Iteration 3:</h2>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/iteration3.png" style= "height:250px; width:190px;">
+			<img src="../assets/iteration3.png" style= "width:70%;">
 		</div>
 		<p>
 			We tried this “S-Shaped” iteration after performing more hand calculations because it improved upon Iteration 2. The top diagonal supports as well as the cable going horizontally through the top and vertically down to the loading zone increased the predicted max load value. However, it added significant weight (almost 40% more).
@@ -80,7 +80,7 @@
 		<h2>Iteration 4:</h2>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/iteration4.png" style= "height:290px; width:225px;">
+			<img src="../assets/iteration4.png" style= "width:70%;">
 		</div>
 		<p>
 			Going back to a design similar to Iteration 2, we moved the diagonal support beams closer to the center, while still keeping the lateral support brace and using the cable mounting tabs on the deck to help prevent twisting. 
@@ -93,7 +93,7 @@
 		<h2>Iteration 5:</h2>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/iteration5.png" style= "height:280px; width:210px;">
+			<img src="../assets/iteration5.png" style= "width:70%;">
 		</div>
 		<p>
 			We compared this bridge's simulation results to those of Iteration 4 and found that the three diagonal supports, while heavier, held proportionally more load and thus proved to be a better design. After this design, we ended up taking out the cables because they were by far the weakest part of the design. We replaced the cables with thin diagonal wood supports and added more lateral bracing for our final design! Our final design also moved the supports inwards, to directly under the load.
@@ -106,7 +106,7 @@
 		<h2>Final Design:</h2>
 		</p>
 		<div class="proj_img">
-			<img src="../assets/iteration6.png" style= "height:590px; width:450px;">
+			<img src="../assets/iteration6.png" style= "width:70%;">
 		</div>
 		<p>
 			Overall, we had the second highest score out of the 20 teams! 
@@ -114,8 +114,20 @@
 
 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Modeling Projects</h2>
+			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
