--- a/projects/humbug.html
+++ b/projects/humbug.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>	
+<div class="content">
 	<div class="box_content">
 		<h1>Humbug Branding</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-10.png" style= "height:450px; width:450px;">
+			<img src="../assets/projecttile-10.png" style= "height:100%; width:100%;">
 		</div>
 		<p>
 		I created this banner and logo for the Humbug, a student-run literary magazine at Dartmouth. The logo takes inspiration from the Humbug character in the Phantom Tollbooth. I was going for something elegant but playful in the illustration. I chose a serif font that had a "classy" feel to go with the logo, and was inspired by designs by "The New Yorker" in my creation process.  
@@ -36,17 +36,33 @@
 		This first banner was my initial design (with the font created by hand with the vector tool), and after receiving feedback, I switched the font and color to better suit the literary magazine feel as well as have consistency with Dartmouth's green color palette.	
 		</p>
 		<div class="proj_img">
-			<img src="../assets/hum1.png" style= "height:120px; width:482px;">
+			<img src="../assets/hum1.png" style= "height:25%; width:100%;">
 		</div>
 		<p>
 		The following design is the final revision I created after taking feedback from the Humbug's editor-in-chief.
 		</p>
 		<div class="proj_img">
-			<img src="../assets/hum2.png" style= "height:105px; width:482px;">
+			<img src="../assets/hum2.png" style= "height:21.8%; width:100%;">
 		</div>
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
