--- a/projects/lapdesk.html
+++ b/projects/lapdesk.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,41 +23,54 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 	<h1>Design Thinking: Lapdesk</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-54.png" style= "height:450px; width:450px;">
+			<img src="../assets/projecttile-54.png" style= "width:100%;">
 			<p>Read more about my Design Thinking projects <a href="../designthinking.html" class="link">here!</a></p>
 		</div>
 
-	<h2>TIMELINE:</b> 1 week</h2>
+	<h2>TIMELINE: 1 week</h2>
 	<p><b>SKILLS:</b> Observational Research, Needfinding, Prototyping, Iterating</p>
-	<p> For one of the projects in my Design Thinking class, we were tasked with creating a device to help Dartmouth students better manage the things they need to carry with them. I worked in a team of three, and each of us observed our potential users for three hours to have a general idea of students' needs.</p>
-	<p>We assembled our insights and ideas, and found the issue of students dropping items in class due to lack of desk space (often no desk space at all) to be a common and compelling problem. One student in particular, Grace, had to juggle her laptop, assignments, notebook, water bottle and pens all on a tiny swing-out board near her seat, and she never got through class without items rolling off. </p>
+	<p> For one of the projects in my Design Thinking class, we were tasked with <mark>creating a device to help Dartmouth students better manage the things they need to carry with them.</mark> I worked in a team of three, and each of us observed our potential users for three hours to have a general idea of students' needs.</p>
+	<p>We assembled our insights and ideas, and found the issue of <mark>students dropping items in class due to lack of desk space (often no desk space at all) to be a common and compelling problem.</mark> One student in particular, Grace, had to juggle her laptop, assignments, notebook, water bottle and pens all on a tiny swing-out board near her seat, and she never got through class without items rolling off. </p>
 	<div class="container_video">
 		<iframe width="640" height="360" src="https://www.youtube.com/embed/DeD8hs--VnA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
 	<p>From our point of view, we decided to create a laptop case with a slide-out table and pockets to include other materials. Below are photos of our foamcore prototype.</p>
-	<div style="text-align: center; display: inline-block">
-		<img src="../assets/foam1.jpeg" style="width: 403px; height:302px">
-		<img src="../assets/foam2.jpeg" style="width: 403px; height:302px">
+	<div class="proj_img">
+		<img src="../assets/foam1.jpeg" style="width: 45%;">
+		<img src="../assets/foam2.jpeg" style="width: 45%;">
 	</div>
 	<p>After receiving feedback, we added and improved features and laser-cut the looks-like prototype</p>
-	<div style="text-align: center; display: inline-block">
-		<img src="../assets/lapdesk-01.png" style="width: 338px; height:252px">
-		<img src="../assets/lapdesk-02.png" style="width: 338px; height:252px">
-		<img src="../assets/lapdesk-03.png" style="width: 338px; height:252px">
-		<img src="../assets/lapdesk-04.png" style="width: 338px; height:252px">
-		<img src="../assets/lapdesk-05.png" style="width: 338px; height:252px">
-		<img src="../assets/lapdesk-06.png" style="width: 338px; height:252px">
+	<div class="proj_img">
+		<img src="../assets/lapdesk-01.png" style="width: 45%;">
+		<img src="../assets/lapdesk-02.png" style="width: 45%;">
+		<img src="../assets/lapdesk-03.png" style="width: 45%;">
+		<img src="../assets/lapdesk-04.png" style="width: 45%;">
+		<img src="../assets/lapdesk-05.png" style="width: 45%;">
+		<img src="../assets/lapdesk-06.png" style="width: 45%;">
 	</div>
 	<h2>Takeaways</h2>
-		<p>This was the first project where we had a user. I learned that <b>including the user throughout the process</b> is key to creating a product that he or she will actually use. Many features of our final prototype would not have existed without the input and feedback from users testing the product. For example, we added the paper holder on the bottom after realizing that our user still had to stuff papers into her backpack at she was running out of class.</p>
+		<p>This was the first project where we had a user. I learned that <mark>including the user throughout the process</mark> is key to creating a product that he or she will actually use. Many features of our final prototype would not have existed without the input and feedback from users testing the product. For example, we added the paper holder on the bottom after realizing that our user still had to stuff papers into her backpack at she was running out of class.</p>
 
 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Modeling Projects</h2>
+			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
