--- a/projects/lily.html
+++ b/projects/lily.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 		<h1>Lily Model</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-37.png" style= "height:450px; width:450px;">
+			<img src="../assets/projecttile-37.png" style= "width:60%;">
 		</div>
 
 		<p>
@@ -39,10 +39,10 @@
 		
 		<h2>T-Pose & Initial Sketches</h2>
 		<div class="proj_img">
-			<img src="../assets/tpose1.png" style= "height:240px; width:200px;">
-			<img src="../assets/tpose2.png" style= "height:240px; width:167px;">
-			<img src="../assets/tpose3.png" style= "height:180px; width:166px;">
-			<img src="../assets/tpose4.png" style= "height:180px; width:176px;">
+			<img src="../assets/tpose1.png" style= "width:20%;">
+			<img src="../assets/tpose2.png" style= "width:20%;">
+			<img src="../assets/tpose3.png" style= "width:20%;">
+			<img src="../assets/tpose4.png" style= "width:20%;">
 		</div>
 
 		<br>
@@ -50,9 +50,9 @@
 
 		<h2>Modeling</h2>	
 		<div class="proj_img">
-			<img src="../assets/modeling1.png" style= "height:270px; width:330px;">
-			<img src="../assets/modeling2.png" style= "height:210px; width:190px;">
-			<img src="../assets/modeling3.png" style= "height:210px; width:305px;">
+			<img src="../assets/modeling1.png" style= "width:30%;">
+			<img src="../assets/modeling2.png" style= "width:30%;">
+			<img src="../assets/modeling3.png" style= "width:30%;">
 		</div>
 
 		<br>
@@ -60,8 +60,8 @@
 
 		<h2>Texturing the Skin (with Subsurface Scattering) and Clothing</h2>	
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "height:183px; width:296px;">
-			<img src="../assets/texturing2.png" style= "height:245px; width:145px;">
+			<img src="../assets/texturing1.png" style= "width:55%;">
+			<img src="../assets/texturing2.png" style= "width:20%;">
 		</div>
 		
 		<br>
@@ -69,9 +69,9 @@
 
 		<h2>Rigging (Human IK, Skinning, Paint Weights, Blend Shapes)</h2>	
 		<div class="proj_img">
-			<img src="../assets/rigging1.png" style= "height:245px; width:255px;">
-			<img src="../assets/rigging2.png" style= "height:245px; width:318px;">
-			<img src="../assets/rigging3.png" style= "height:245px; width:407px;">
+			<img src="../assets/rigging1.png" style= "width:23%;">
+			<img src="../assets/rigging2.png" style= "width:30%;">
+			<img src="../assets/rigging3.png" style= "width:35%;">
 		</div>
 		
 		<br>
@@ -79,8 +79,20 @@
 
 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Modeling Projects</h2>
+			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
