--- a/projects/sdc.html
+++ b/projects/sdc.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,25 +23,43 @@
 </div>
 
 <div class="top_padding"></div>	
+<div class="content">
 	<div class="box_content">
 		<h1>Senior Design Challenge Branding</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-31.png" style= "height:450px; width:450px;">
+			<img src="../assets/projecttile-31.png" style= "height:100%; width:100%;">
 		</div>
 			<p>
 			I worked with Professor Eugene Korsunskiy and Ashley Manning on branding Thayer Engineering's new class ENGS 16: Senior Design Challenge, which is a capstone class for the design thinking experience. I created the logo and promotional posters for the class. 
 			For the logo, I wanted to incorporate various aspects of design thinking (such as the iconic sticky notes, hexagon shape, or intersection Venn Diagram circles). We wanted a minimalistic logo that would transfer well in a single solid color. In the end, we created the Senior Design Challenge logo with intersection Venn Diagram circles that include a hexagon element in the center. Afterwards, I created some posters to promote class enrollment. A few drafts are pictured below, but we eventually went with the design that features a top-down view of a table with various tools scattered around. 
 			</p>
 		<div class="proj_img">
-			<img src="../assets/sdcdraft1.png" style= "height:220px; width:140px;">
-			<img src="../assets/sdcdraft2.png" style= "height:220px; width:140px;">
+			<img src="../assets/sdcdraft1.png" style= "height:62.8%; width:40%;">
+			<img src="../assets/sdcdraft2.png" style= "height:62.8%; width:40%;">
 			<br>
-			<img src="../assets/SDCStudentPoster.jpg" style= "height:825px; width:495px;">
+			<img src="../assets/SDCStudentPoster.jpg" style= "height:166%; width:100%;">
 		</div>
 		 
 	</div>
-	<br>
-	<br>
+</div>
+
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
