--- a/projects/stressball.html
+++ b/projects/stressball.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,6 +23,7 @@
 </div>
 
 <div class="top_padding"></div>	
+<div class="content">
 	<div class="box_content">
 		<h1>Stressed Out short film</h1>
 		<div class="container_video">
@@ -34,16 +34,16 @@
 			I briefly documented our process <a href="https://www.dropbox.com/s/eugpjh1m7ljnjxf/Stressball_YAN.pdf?dl=0" class="link">here.</a> 
 			</p>
 			<h2>Model Renders and Film Screenshots</h2>
-			<div class="proj_img">
-				<img src="../assets/pencup_render.jpg" style= "height:270px; width:233px;">
-				<img src="../assets/fan_render.jpg" style= "height:270px; width:250px;">
-				<img src="../assets/coke-render.jpg" style= "height:270px; width:217px;">
-				<img src="../assets/clothes-render.jpg" style= "height:270px; width:480px;">
-				<img src="../assets/screen4.png" style= "height:269px; width:478px;">
-				<img src="../assets/screen1.png" style= "height:494px; width:812px;">
-				<img src="../assets/screen2.png" style= "height:524px; width:802px;">
-				<img src="../assets/screen3.png" style= "height:574px; width:802px;">
-			</div>
+		<div class="proj_img">
+			<img src="../assets/pencup_render.jpg" style= "height:23%; width:20%;">
+			<img src="../assets/fan_render.jpg" style= "height:21.6%%; width:20%;">
+			<img src="../assets/coke-render.jpg" style= "height:25%; width:20%;">
+			<img src="../assets/clothes-render.jpg" style= "height:56.3%; width:80%;">
+			<img src="../assets/screen4.png" style= "height:56.3%; width:80%;">
+			<img src="../assets/screen1.png" style= "height:50%; width:80%;">
+			<img src="../assets/screen2.png" style= "height:53%; width:80%;">
+			<img src="../assets/screen3.png" style= "height:58%; width:80%;">
+		</div>
 			<h2>Takeaways</h2>
 			<p>
 			Overall, this was an absolutely exhausting yet extremely rewarding project. I  learned so much about myself, from how I deal with stress under deadlines to how I work best on a team. We had so many bumps along the way, the biggest one being a Maya glitch that prevented us from being able to use a render farm to render our scenes - we had to manually "render sequence" each frame on our own (turns out Maya had issues batch rendering discs, which we used for the eyeballs). If given more time, I would love to have focused more on sound and refine some scenes in the middle of the film, but I am so proud of what we accomplished.	
@@ -51,11 +51,24 @@
 		
 		 
 	</div>
-	<br>
-	<br>
-	<footer>
-	&copy; Regina Yan
-	</footer>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Modeling Projects</h2>
+			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		</div>
+	</div>
+</div>
+
+<footer>
+&copy; Regina Yan
+</footer>
 
 </body>
 <script type="text/javascript">
