--- a/projects/superfb.html
+++ b/projects/superfb.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 		<h1>Super Frat Bros Unity Game</h1>
 		<div class="proj_img">
-			<img src="../assets/superfrat.png" style= "height:448px; width:720px;">
+			<img src="../assets/superfrat.png" style= "height:62.2%; width:100%;">
 			<p>Play the game <a href="http://superfratbros.surge.sh/" class="link">here!</a></p>
 		</div>
 
@@ -39,16 +39,16 @@
 		</p>
 		
 		<h2>Sample assets</h2>
-		<div class="proj_img">
-			<img src="../assets/axa_animated.gif" style= "height:200px; width:200px;">
-			<img src="../assets/collis.png" style= "height:200px; width:200px;">
-			<img src="../assets/baker_animated.gif" style= "height:400px; width:200px;">
-			<img src="../assets/dartmouthhall.png" style= "height:200px; width:200px;">
-			<img src="../assets/dds.gif" style= "height:200px; width:375px;">
-			<img src="../assets/lodge_animated.gif" style= "height:200px; width:300px;">
-			<img src="../assets/sns.png" style= "height:200px; width:200px;">
-			<img src="../assets/sae.gif" style= "height:200px; width:200px;">
-			<img src="../assets/sigep_animated.gif" style= "height:200px; width:200px;">
+		<div class="proj_img">			
+			<img src="../assets/baker_animated.gif" style= "height:80%; width:40%;">
+			<img src="../assets/dartmouthhall.png" style= "height:40%; width:40%;">
+			<img src="../assets/axa_animated.gif" style= "height:40%; width:40%;">
+			<img src="../assets/collis.png" style= "height:40%; width:40%;">
+			<img src="../assets/dds.gif" style= "width:40%;">
+			<img src="../assets/lodge_animated.gif" style= "width:40%">
+			<img src="../assets/sns.png" style= "width:40%">
+			<img src="../assets/sae.gif" style= "width:40%">
+			<img src="../assets/sigep_animated.gif" style= "width:40%">
 		</div>
 
 		<br>
@@ -56,8 +56,20 @@
 
 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Modeling Projects</h2>
+			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
