--- a/projects/thedish.html
+++ b/projects/thedish.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="active">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 		<h1>The Dish.</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-44.png" style= "height:450px; width:450spx;">
+			<img src="../assets/projecttile-44.png" style= "width:80%;">
 			<p>View our site <a href="https://www.thedish.us" class="link">here.</a></p>
 		</div>
 
@@ -35,7 +35,7 @@
 		<h2>Status: Launched</h2>
 		<h2>Overview</h2>
 		<p>
-		As a design intern at Cogo Labs, I worked on a team with four other interns (two data analysts and two engineers) to create a website from absolute scratch. The theme was “events”, and the end goal was to maximize 10 metrics (such as total visitors, ad CPC, returning visitors, bounce rate). 
+		As a design intern at Cogo Labs, I worked on a team with four other interns (two data analysts and two engineers) to create a website from absolute scratch. <mark>The theme was “events”, and the end goal was to maximize 10 metrics</mark> (such as total visitors, ad CPC, returning visitors, bounce rate). 
 		</p>
 		<h2>Timeline</h2>
 		<p>
@@ -62,18 +62,18 @@
 
 		<h2>Research & Need-Finding</h2>
 		<div class="proj_img">
-			<img src="../assets/internz.png" style= "height:300px; width:465px;">
+			<img src="../assets/internz.png" style= "width:80%;">
 			<p class="subtitle">A fun sticky-note brainstorming session with the team to map existing products, current experiences, and user pain points</p>
 		</div>
 		<p>
-		After initial research and interviews and pivoting through a few different ideas, my team decided to build a site that would give foodies insider access to the hottest food trends and where to find them. Our users wanted a sleek user flow that would take the work out of finding these trends and restaurants. So, we created "the dish."
+		After initial research and interviews and pivoting through a few different ideas, <mark>my team decided to build a site that would give foodies insider access to the hottest food trends and where to find them. Our users wanted a sleek user flow that would take the work out of finding these trends and restaurants.</mark> So, we created "the dish."
 		</p>
 		<br>
 		<br>
 
 		<h2>Landing Page & User Base Buildup</h2>	
 		<div class="proj_img">
-			<img src="../assets/landing.png" style= "height:512px; width:414px;">
+			<img src="../assets/landing.png" style= "width:60%;">
 			<p class="subtitle">Initial landing page for the dish.</p>
 		</div>
 		<p>
@@ -83,7 +83,7 @@
 			We also launched social media campaigns and generated a user base through our Facebook and Instagram accounts. 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/insta.png" style= "height:384px; width:465px;">
+			<img src="../assets/insta.png" style= "width:80%;">
 			<p class="subtitle">We used Instagram to engage with users and build a relationship with trendy restaurants in the area.</p>
 		</div>
 		<br>
@@ -91,14 +91,14 @@
 
 		<h2>Wireframing</h2>	
 		<div class="proj_img">
-			<img src="../assets/cariterate.png" style= "height:225px; width:365px;">
+			<img src="../assets/cariterate.png" style= "width:60%;">
 			<p class="subtitle">A humbling lesson on building a product that will get better and better with each iteration</p>
 		</div>
 		<p>
 		In the meantime, I worked on wireframing the MVP site on paper and with Balsamiq. We were inspired by this cartoon that helped us decide that a simple (but working) prototype should be our priority, rather than trying to implement every single feature from the get-go. 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/wireframin.png" style= "height:285px; width:510px;">
+			<img src="../assets/wireframin.png" style= "width:100%;">
 			<p class="subtitle">Initial wireframing focused on 3 main pages: the landing/home page, the trend page, and the restaurant page</p>
 		</div>
 		<br>
@@ -106,7 +106,7 @@
 
 		<h2>Prototyping & User Testing</h2>	
 		<div class="proj_img">
-			<img src="../assets/hifi.png" style= "height:255px; width:650px;">
+			<img src="../assets/hifi.png" style= "width:100%;">
 			<p class="subtitle">Desktop and mobile high-fidelity mockups of the 3 main pages</p>
 		</div>
 		<p>
@@ -116,7 +116,7 @@
 		I also created a Style Guide to help our engineers as they coded the MVP with React.
 		</p>
 		<div class="proj_img">
-			<img src="../assets/styleguide.png" style= "height:390px; width:625px;">
+			<img src="../assets/styleguide.png" style= "width:80%;">
 			<p class="subtitle">Snippet of the style guide</p>
 		</div>
 		<br>
@@ -124,7 +124,7 @@
 
 		<h2>Launch!</h2>	
 		<div class="proj_img">
-			<img src="../assets/dabeach.png" style= "height:320px; width:485px;">
+			<img src="../assets/dabeach.png" style= "width:80%;">
 			<p class="subtitle">Does this count as work?</p>
 		</div>
 		<p>
@@ -135,7 +135,7 @@
 
 		<h2>Iterating & Adding Features</h2>	
 		<div class="proj_img">
-			<img src="../assets/abtest.png" style= "height:270px; width:710px;">
+			<img src="../assets/abtest.png" style= "width:100%;">
 			<p class="subtitle">We created this A/B test to see whether users engaged more with illustration icons or photo images</p>
 		</div>
 		<p>
@@ -145,31 +145,43 @@
 		We also tested various ad campaigns to see which would attract users more, and we further focused our campaigns as we learned from previous CPC results. Granularity was a key word during this phrase since we reached a point where we were able to target more and more specific users to optimize our metrics.
 		</p>
 		<div class="proj_img">
-			<img src="../assets/ads.png" style= "height:263px; width:735px;">
+			<img src="../assets/ads.png" style= "width:100%;">
 			<p class="subtitle">We also A/B tested two styles of ads to see which performed better. The ad on the right ultimately had the lower CPC</p>
 		</div>
 		<p>
 		I also learned how to use After Effects during some free moments to bring some “moments of delight” with fun animations!
 		</p>
 		<div class="proj_img">
-			<img src="../assets/home_animation.gif" style= "height:250px; width:250px;">
-			<img src="../assets/home_gif.gif" style= "height:250px; width:250px;">
+			<img src="../assets/home_animation.gif" style= "width:45%;">
+			<img src="../assets/home_gif.gif" style= "width:45%;">
 		</div>
 		<p>
-		Overall, this was such an amazing summer. I learned so much working with my team and design mentor Maddie, and it’s so cool to see how far our product came. I loved being involved in every aspect of the process - while I was the designer, I still worked with the analysts and engineers to understand what they were doing as well. Cogo is a very data-driven company, and it was neat using the company's resources to inform our decisions. Moving forward, I'm so excited to take the lessons I learned and make some awesome projects in the future. 
+		Overall, this was such an amazing summer. I learned so much working with my team and design mentor Maddie, and it’s so cool to see how far our product came. <mark>I loved being involved in every aspect of the process - while I was the designer, I still worked with the analysts and engineers to understand what they were doing as well.</mark> Cogo is a very data-driven company, and it was neat using the company's resources to inform our decisions. Moving forward, I'm so excited to take the lessons I learned and make some awesome projects in the future. 
 		</p>
 
 		<p>View our site <a href="https://www.thedish.us" class="link">here.</a></p>
 		<div class="proj_img">
-			<img src="../assets/thecrew.png" style= "height:365px; width:465px;">
+			<img src="../assets/thecrew.png" style= "width:80%;">
 		</div>
 
 		
 
 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More UI/UX Projects</h2>
+		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
+		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
+		<a href="digdreams.html"><img class="tile_small" src="../assets/projecttile-55.png"></a>
+		<a href="meta.html"><img class="tile_small" src="../assets/projecttile-45.png"></a>
+		<a href="sharity.html"><img class="tile_small" src="../assets/projecttile-41.png"></a>
+		<a href="kaf.html"><img class="tile_small" src="../assets/projecttile-42.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
