--- a/projects/apologia.html
+++ b/projects/apologia.html
@@ -12,7 +12,6 @@
 	<header class="container">
 	<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="active">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>	
+	<div class="content">
 	<div class="box_content">
-		<h2>Apologia Magazine Cover</h2>
+		<h1>Apologia Magazine Cover</h1>
 		<div class="proj_img">
-			<img src="../assets/apologiamock.png" style= "height:425px; width:554px;">
+			<img src="../assets/apologiamock.png" style= "height:77%; width:100%;">
 		</div>
 		<p>
 		The Dartmouth Apologia is a journal, blog and forum that articulates Christian perspectives in the academic community. Apologia asked me to design the front and back of its 2018 Spring issue, whose cover article revolved around Plato's Allegory of the Cave. 
@@ -37,12 +37,33 @@
 		<h2>Takeaways</h2>
 		</p>
 		<p>
-		I was given a lot of freedom with the cover design given the established logo/general layout that stayed consistent with previous issues. This was the first project that required research to gain a better understanding of the design challenge. I also made sure to ask many questions since I wanted this cover to accurately reflect Apologia's mission. Being informed strongly aided my design process, and I'll bring this research phase to future projects with partners. 
+		I was given a lot of freedom with the cover design given the established logo/general layout that stayed consistent with previous issues. This was the first project that required <mark>research to gain a better understanding of the design challenge.</mark> I also made sure to <mark>ask many questions</mark> since I wanted this cover to accurately reflect Apologia's mission. Being informed strongly aided my design process, and I'll bring this research phase to future projects with partners. 
 		</p>
 		 
 	</div>
-	<br>
-	<br>
+	</div>
+	<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Illustration Projects</h2>
+			<a href="dmcposter.html"><img class="tile_small" src="../assets/projecttile-08.png"></a>
+			<a href="snowwars.html"><img class="tile_small" src="../assets/projecttile-09.png"></a>
+			<a href="trips.html"><img class="tile_small" src="../assets/projecttile-11.png"></a>
+			<a href="iceposter.html"><img class="tile_small" src="../assets/projecttile-25.png"></a>
+			<a href="brewhaha.html"><img class="tile_small" src="../assets/projecttile-14.png"></a>
+			<a href="campdart.html"><img class="tile_small" src="../assets/projecttile-15.png"></a>
+			<a href="cabaret.html"><img class="tile_small" src="../assets/projecttile-49.png"></a>
+			<a href="apologia.html"><img class="tile_small" src="../assets/projecttile-50.png"></a>
+			<a href="vox.html"><img class="tile_small" src="../assets/projecttile-46.png"></a>
+			<a href="lunarnewyear.html"><img class="tile_small" src="../assets/projecttile-21.png"></a>
+			<a href="climbingteam.html"><img class="tile_small" src="../assets/projecttile-22.png"></a>
+			<a href="dog.html"><img class="tile_small" src="../assets/projecttile-23.png"></a>
+			<a href="grafficity.html"><img class="tile_small" src="../assets/projecttile-48.png"></a>
+			<a href="thefifty.html"><img class="tile_small" src="../assets/projecttile-30.png"></a>
+			<a href="provost.html"><img class="tile_small" src="../assets/projecttile-24.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
