--- a/projects/dmc.html
+++ b/projects/dmc.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>	
+	<div class="content">
 	<div class="box_content">
 		<h1>Dartmouth Mountaineering Club logo</h1>
 		<div class="proj_img">
-			<img src="../assets/dmclogo.png" style= "height:450px; width:450px;">
+			<img src="../assets/dmclogo.png" style= "height:100%; width:100%;">
 		</div>
 			<p>
 			The Dartmouth Mountaineering Club is one of my main extracurriculars on campus, so it was very exciting for me to create an updated logo for the DMC. I wanted to use a similar color to the previous logo and keep some design consistency with the overall Dartmouth Outing Club logo while still making the design unique to the DMC. After some sketches and input from club members, I created this logo for our club, which is now featured on stickers and clothing as well as the club’s updated <a href="http://www.dartmouthmountaineering.org" class="link">website.</a>
@@ -35,8 +35,24 @@
 		
 		 
 	</div>
-	<br>
-	<br>
+	</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
