--- a/projects/iceposter.html
+++ b/projects/iceposter.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="active">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,6 +23,7 @@
 </div>
 
 <div class="top_padding"></div>	
+	<div class="content">
 	<div class="box_content">
 		<h1>2017 Winter Carnival Poster</h1>
 		<div class="proj_img">
@@ -38,12 +38,33 @@
 		<h2>Takeaways</h2>
 		</p>
 		<p>
-		While this design did not win, I received a lot of constructive criticism that helped me going forwards. The biggest comment I received regarded my lack of a central figure on the poster - there's a lot going on, but there's no main element. If I were to work on this more, I would either increase the size of the castle and make that the central focal or point, or do the same with the person on the dragon. Definitely something I'll work on in the future! 	
+		While this design did not win, I received a lot of constructive criticism that helped me going forwards. The biggest comment I received regarded my lack of a central figure on the poster - there's a lot going on, but <mark>I need a main element to anchor the eye's attention.</mark> If I were to work on this more, I would either increase the size of the castle and make that the central focal or point, or do the same with the person on the dragon. Definitely something I'll work on in the future! 	
 		</p>
 		 
 	</div>
-	<br>
-	<br>
+	</div>
+	<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Illustration Projects</h2>
+			<a href="dmcposter.html"><img class="tile_small" src="../assets/projecttile-08.png"></a>
+			<a href="snowwars.html"><img class="tile_small" src="../assets/projecttile-09.png"></a>
+			<a href="trips.html"><img class="tile_small" src="../assets/projecttile-11.png"></a>
+			<a href="iceposter.html"><img class="tile_small" src="../assets/projecttile-25.png"></a>
+			<a href="brewhaha.html"><img class="tile_small" src="../assets/projecttile-14.png"></a>
+			<a href="campdart.html"><img class="tile_small" src="../assets/projecttile-15.png"></a>
+			<a href="cabaret.html"><img class="tile_small" src="../assets/projecttile-49.png"></a>
+			<a href="apologia.html"><img class="tile_small" src="../assets/projecttile-50.png"></a>
+			<a href="vox.html"><img class="tile_small" src="../assets/projecttile-46.png"></a>
+			<a href="lunarnewyear.html"><img class="tile_small" src="../assets/projecttile-21.png"></a>
+			<a href="climbingteam.html"><img class="tile_small" src="../assets/projecttile-22.png"></a>
+			<a href="dog.html"><img class="tile_small" src="../assets/projecttile-23.png"></a>
+			<a href="grafficity.html"><img class="tile_small" src="../assets/projecttile-48.png"></a>
+			<a href="thefifty.html"><img class="tile_small" src="../assets/projecttile-30.png"></a>
+			<a href="provost.html"><img class="tile_small" src="../assets/projecttile-24.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
