--- a/projects/meta.html
+++ b/projects/meta.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="active">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,15 +23,15 @@
 </div>
 
 	<div class="top_padding"></div>
-
+<div class="content">
 <div class="box_content">
 		<h1>Personal Website</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-45.png" style= "height:450px; width:450spx;">
+			<img src="../assets/projecttile-45.png" style= "height:100%;">
 		</div>
 
 		<p>
-		This is quite meta and by no means a sly "humble-brag/undercover self-call" on my part. I thought I'd just document a bit of my process of creating this site since I figured it's about time I learn HTML/CSS/Javascript. I've found that, as a UI/UX designer working with front-end developers, it's so important to understand the engineering side so that I can 1. be more mindful of their process when I'm creating designs and 2. better communicate my ideas to them. 
+		This is quite meta and by no means a sly "humble-brag/undercover self-call" on my part. I thought I'd just document a bit of my process of creating this site since I figured it's about time I learn HTML/CSS/Javascript. I've found that, as a UI/UX designer working with front-end developers, <mark>it's so important to understand the engineering side so that I can 1. be more mindful of their process when I'm creating designs and 2. better communicate my ideas to them. </mark>
 		</p>
 		<p>
 		So, I watched a few youtube videos and played around with some online tutorials to create this site over my junior summer. I wrote basic HTML/CSS and included a bit of Javascript for the Design Thinking page. Once I had a general template, I wrote out documentation and description for the projects I’ve designed. The hardest part honestly was getting myself to stop - I would start coding/writing after dinner and suddenly realize that it's 3AM! 
@@ -42,8 +41,20 @@
 		I am starting to delve deeper into the UI/UX field, and I'm so excited to explore even more. I've spoken with a few web engineers during my internship at Cogo Labs to ask for feedback and advice on moving forward. I will be learning React next and working more closely with developers… we'll see what happens!
 		</p>
 </div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More UI/UX Projects</h2>
+		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
+		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
+		<a href="digdreams.html"><img class="tile_small" src="../assets/projecttile-55.png"></a>
+		<a href="meta.html"><img class="tile_small" src="../assets/projecttile-45.png"></a>
+		<a href="sharity.html"><img class="tile_small" src="../assets/projecttile-41.png"></a>
+		<a href="kaf.html"><img class="tile_small" src="../assets/projecttile-42.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
