--- a/projects/sharity.html
+++ b/projects/sharity.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="active">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,10 +23,11 @@
 </div>
 
 <div class="top_padding"></div>
+<div class="content">
 <div class="box_content">
 	<h1>Sharity</h1>
 	<div class="proj_img">
-		<img src="../assets/projecttile-41.png" style= "height:450px; width:450spx;">
+		<img src="../assets/projecttile-41.png" style= "width:100%;">
 	</div>
 	<h2>Status: Researching</h2>
 	<p>
@@ -56,8 +56,20 @@
 
 
 </div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More UI/UX Projects</h2>
+		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
+		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
+		<a href="digdreams.html"><img class="tile_small" src="../assets/projecttile-55.png"></a>
+		<a href="meta.html"><img class="tile_small" src="../assets/projecttile-45.png"></a>
+		<a href="sharity.html"><img class="tile_small" src="../assets/projecttile-41.png"></a>
+		<a href="kaf.html"><img class="tile_small" src="../assets/projecttile-42.png"></a>
+		</div>
+	</div>
+</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
