--- a/projects/snowwars.html
+++ b/projects/snowwars.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="active">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -24,11 +23,12 @@
 </div>
 
 <div class="top_padding"></div>	
+	<div class="content">
 	<div class="box_content">
 		<h1>2018 Winter Carnival Poster</h1>
 		<div class="proj_img">
 			<!-- <img src="../assets/snowwars_final11-01.png" style= "height:1080px; width:720px;"> -->
-			<img src="../assets/snowwarsmock.png" style= "height:600px; width:600px;">
+			<img src="../assets/snowwarsmock.png" style= "height:100%; width:100%;">
 		</div>
 			<p>
 			Dartmouth's 2018 Winter Carnival theme was "Snow Wars: May the Frost be with You". Motivated by coming in second in the poster design contest last year, I created this design in Illustrator with help from all the feedback I received from my last submission. This poster features the classic skier, here as Dartmouth Vader, and the structures surrounding him reference Dartmouth buildings (such as our iconic Baker Berry tower on the left).  
@@ -37,11 +37,34 @@
 			<p>
 			I'm very proud of this poster, but looking back there are so many things I could have done better. I'm glad I asked for feedback throughout this process, which certainly improved my design, but I could've pushed many aspects further (such as color - it's a bit flat). The actual file is also a bit messy - I had not discovered the shape builder or pathfinder tool yet, so everything was essentially created using masks. Moving forward I will work on cleaning up my design organization and being cognizant of my tendencies to choose mellow/less bold colors. 	
 			</p>
-		
-		 
+				 
 	</div>
-	<br>
-	<br>
+	</div>
+
+	<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Illustration Projects</h2>
+			<a href="dmcposter.html"><img class="tile_small" src="../assets/projecttile-08.png"></a>
+			<a href="snowwars.html"><img class="tile_small" src="../assets/projecttile-09.png"></a>
+			<a href="trips.html"><img class="tile_small" src="../assets/projecttile-11.png"></a>
+			<a href="iceposter.html"><img class="tile_small" src="../assets/projecttile-25.png"></a>
+			<a href="brewhaha.html"><img class="tile_small" src="../assets/projecttile-14.png"></a>
+			<a href="campdart.html"><img class="tile_small" src="../assets/projecttile-15.png"></a>
+			<a href="cabaret.html"><img class="tile_small" src="../assets/projecttile-49.png"></a>
+			<a href="apologia.html"><img class="tile_small" src="../assets/projecttile-50.png"></a>
+			<a href="vox.html"><img class="tile_small" src="../assets/projecttile-46.png"></a>
+			<a href="lunarnewyear.html"><img class="tile_small" src="../assets/projecttile-21.png"></a>
+			<a href="climbingteam.html"><img class="tile_small" src="../assets/projecttile-22.png"></a>
+			<a href="dog.html"><img class="tile_small" src="../assets/projecttile-23.png"></a>
+			<a href="grafficity.html"><img class="tile_small" src="../assets/projecttile-48.png"></a>
+			<a href="thefifty.html"><img class="tile_small" src="../assets/projecttile-30.png"></a>
+			<a href="provost.html"><img class="tile_small" src="../assets/projecttile-24.png"></a>
+		</div>
+	</div>
+	</div>
+
+
 	<footer>
 	&copy; Regina Yan
 	</footer>
