--- a/projects/wiw.html
+++ b/projects/wiw.html
@@ -12,7 +12,6 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
@@ -24,11 +23,12 @@
 </div>
 
 <div class="top_padding"></div>	
+<div class="content">
 	<div class="box_content">
 		<h1>Women in the Wilderness Logo</h1>
 		<div class="proj_img">
-			<img src="../assets/wiw.jpg" style= "height:450px; width:450px;">
-			<img src="../assets/WIW_lavenderwhite.png" style= "height:450px; width:450px;">
+			<img src="../assets/wiw.jpg" style= "height:100%; width:100%;">
+			<img src="../assets/WIW_lavenderwhite.png" style= "height:100%; width:100%;">
 		</div>
 			<p>
 			Women in the Wilderness, or “WIW”, is a female-led sub club of the Dartmouth Outing Club. The club was created in 1992 but did not have many members and fizzled out. In 2015 Carolyn McShea revived the club and asked me to help design the logo. This design is used on t-shirts and stickers for the club, which now has over 60 members!
@@ -36,8 +36,24 @@
 		
 		 
 	</div>
-	<br>
-	<br>
+</div>
+<div class="proj_nav_background">
+	<div class="proj_nav_content">
+		<div class="proj_nav">
+		<h2>More Branding Projects</h2>
+			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
+			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
+			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
+			<a href="earthweek.html"><img class="tile_small" src="../assets/earthweeklogo.png"></a>
+			<a href="bgd.html"><img class="tile_small" src="../assets/projecttile-27.png"></a>
+			<a href="wiw.html"><img class="tile_small" src="../assets/projecttile-28.png"></a>
+			<a href="saam.html"><img class="tile_small" src="../assets/projecttile-32.png"></a>
+			<a href="alianza.html"><img class="tile_small" src="../assets/projecttile-33.png"></a>
+			<a href="doc.html"><img class="tile_small" src="../assets/projecttile-34.png"></a>
+			<a href="humbug.html"><img class="tile_small" src="../assets/projecttile-10.png"></a>
+		</div>
+	</div>
+	</div>
 	<footer>
 	&copy; Regina Yan
 	</footer>
