--- a/uiux.html
+++ b/uiux.html
@@ -13,7 +13,6 @@
 	<header class="container">
 		<a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="uiux.html" class="active">UI/UX</a><a class="hide">__</a>
 			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
 			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
@@ -29,6 +28,7 @@
 <div class="container_featuredProjects">
 	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
+	<a href="projects/digdreams.html"><img class="tile" src="assets/projecttile-55.png"></a>
 	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
 	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
 	<a href="projects/kaf.html"><img class="tile" src="assets/projecttile-42.png"></a>
