--- a/projects/sharity.html
+++ b/projects/sharity.html
@@ -27,32 +27,26 @@
 <div class="box_content">
 	<h1>Sharity</h1>
 	<div class="proj_img">
-		<img src="../assets/projecttile-41.png" style= "width:100%;">
+		<img src="../assets/sharitymockup.png" style= "width:100%;">
 	</div>
-	<h2>Status: Researching</h2>
+	<h2>Status: Developing</h2>
 	<p>
 	Nowadays we have so many opportunities to give to causes. However, there is little, if any, connection between the giver and the receiver, and this lack of communication results in 1) many donations that are not properly distributed to those who need it the most, and 2) the giver not knowing the extent to which their donation benefited an individual, something that decreases the "feel-good" emotion and the motivation to donate in the future. 
 	</p>
 	<p>
-	Sharity is here to <b>reimagine the donation process by directly linking the giver to the receiver.</b> It's a peer-to-peer platform that allows users to request items and tell their story as well as givers to list their items. Users can then use the opportunity to create a connection that extends beyond the donated object. 
+	Sharity is here to <mark>reimagine the donation process by directly linking the giver to the receiver.</mark> It's a peer-to-peer platform that allows users to request items and tell their story as well as givers to list their items. Users can then use the opportunity to create a connection that extends beyond the donated object. 
 	</p>
 	<p>
-	I am working as the designer on this project. The project is led by a Stamps Scholar who is conducting research in this field. The site is still in basic wireframe mode (Figma link <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a>) and it will start seeing progress in the upcoming year!
+	<mark>I am working as the designer on this project and currently helping with front-end development in React.</mark> The project is led by a Stamps Scholar who is conducting research in this field. The site is still in basic wireframe mode (Figma link <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a>) and it will start seeing progress in the upcoming year!
 	</p>
 	<p>
-	<h2>Design ideas</h2>	
+	<h2>Sketch Files</h2>	
 	</p>
 
 	<div class="proj_img">
-		<p>Landing Page: Scroll-jack effect with animated "heart" icons that lead user through the landing page (to symbolize connecting individuals in different places), information about Sharity will appear as you scroll</p>
-		<img src="../assets/landingMock.png" style= "height:597px; width:257px;">
+		<img src="../assets/sharitysketch.png" style= "width: 100%;">
 	</div>
 
-	<div class="proj_img">
-		<p>Logos:</p>
-		<img src="../assets/sharity1.png" style= "height:300px; width:300px;">
-		<img src="../assets/sharity2.png" style= "height:300px; width:300px;">
-	</div>
 
 
 </div>
